--- a/app/src/main/res/layout/fragment_bottles.xml
+++ b/app/src/main/res/layout/fragment_bottles.xml
@@ -3,43 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bottles_fon"
+    android:scaleType="fitXY"
     android:baselineAligned="false"
     >
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/total"
         android:id="@+id/textViewAmount"
-        android:layout_marginTop="103dp"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textViewToReturn"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="80dp"
-        android:layout_marginEnd="80dp" />
+        android:layout_alignRight="@+id/textViewToReturn"
+        android:layout_marginTop="167dp"
+        android:text="@string/total"
+        android:textSize="30sp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageViewPlusBuy"
-        android:layout_marginBottom="148dp"
         android:src="@drawable/plus_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/textViewAmount"
-        android:layout_alignStart="@+id/textViewAmount" />
+        android:layout_above="@+id/textViewToReturn"
+        android:layout_toRightOf="@+id/textViewToBuy"
+        android:layout_toEndOf="@+id/textViewToBuy" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageViewMinusBuy"
         android:src="@drawable/minus_button"
-        android:layout_alignTop="@+id/imageViewPlusBuy"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="74dp"
-        android:layout_marginStart="74dp" />
+        android:layout_above="@+id/textViewToReturn"
+        android:layout_toLeftOf="@+id/textViewToBuy"
+        android:layout_toStartOf="@+id/textViewToBuy" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +44,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/buy_count"
         android:id="@+id/textViewBuy"
-        android:layout_alignBottom="@+id/imageViewPlusBuy"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/textViewToBuy"
         android:layout_centerHorizontal="true" />
 
     <ImageView
@@ -75,9 +73,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/return_count"
         android:id="@+id/textViewReturn"
-        android:layout_alignBottom="@+id/imageViewMinusReturn"
+        android:layout_below="@+id/textViewToReturn"
         android:layout_alignLeft="@+id/textViewBuy"
-        android:layout_alignStart="@+id/textViewBuy" />
+        android:layout_alignStart="@+id/textViewBuy"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -94,9 +93,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/to_buy"
         android:id="@+id/textViewToBuy"
-        android:layout_above="@+id/textViewBuy"
+        android:layout_above="@+id/imageViewMinusBuy"
         android:layout_centerHorizontal="true" />
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_next"
@@ -104,5 +103,14 @@
         android:src="@drawable/next"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="4dp"/>
+        android:layout_marginBottom="10dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textViewAmount"
+        android:layout_toEndOf="@+id/textViewAmount"
+        android:layout_toRightOf="@+id/textViewAmount"
+        android:text="@string/uah" />
 </RelativeLayout>
