--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:id="@+id/button_next"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/next"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"/>
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="250dp"
@@ -20,6 +21,7 @@
         android:id="@+id/editName"
 
         android:layout_toRightOf="@+id/textView"
+
          />
 
     <TextView
@@ -31,6 +33,7 @@
 
         android:layout_alignBottom="@+id/editName"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="16dp"
          />
 
     <EditText
@@ -40,6 +43,7 @@
 
         android:layout_below="@+id/textView"
         android:layout_toRightOf="@+id/textView2"
+
         />
 
     <TextView
@@ -50,7 +54,8 @@
         android:id="@+id/textView2"
 
         android:layout_alignBottom="@+id/editPhone"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="16dp"/>
 
     <EditText
         android:layout_width="250dp"
@@ -59,6 +64,7 @@
         android:text="@string/Kyiv"
         android:layout_below="@+id/textView2"
         android:layout_toRightOf="@+id/textView3"
+
         />
 
     <TextView
@@ -69,7 +75,8 @@
         android:id="@+id/textView3"
         android:layout_alignBottom="@+id/editCity"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"/>
 
     <EditText
         android:layout_width="250dp"
@@ -89,7 +96,8 @@
 
         android:layout_alignBottom="@+id/editAdres"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"/>
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -97,7 +105,8 @@
         android:layout_below="@+id/editAdres"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/radioGroup">
+        android:id="@+id/radioGroup"
+        android:layout_marginLeft="16dp">
 
         <RadioButton
             android:layout_width="wrap_content"
