--- a/app/src/main/res/layout/fragment_special.xml
+++ b/app/src/main/res/layout/fragment_special.xml
@@ -27,15 +27,15 @@
 
     </ScrollView>
 
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:id="@+id/button_next"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/next"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"/>
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
