--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -19,10 +19,11 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/editName"
-
+         android:layout_marginTop="40dp"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/textView"
-
-         />
+        android:layout_alignRight="@+id/editCity"
+        android:layout_alignEnd="@+id/editCity" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +45,8 @@
         android:layout_below="@+id/textView"
         android:layout_toRightOf="@+id/textView2"
 
-        />
+        android:layout_alignRight="@+id/editName"
+        android:layout_alignEnd="@+id/editName" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,6 +66,7 @@
         android:text="@string/Kyiv"
         android:layout_below="@+id/textView2"
         android:layout_toRightOf="@+id/textView3"
+        android:layout_marginRight="16dp"
 
         />
 
@@ -72,6 +75,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/city"
+
         android:id="@+id/textView3"
         android:layout_alignBottom="@+id/editCity"
         android:layout_alignParentLeft="true"
@@ -85,7 +89,8 @@
 
         android:layout_below="@+id/textView3"
         android:layout_toRightOf="@+id/textView4"
-        />
+        android:layout_alignRight="@+id/editCity"
+        android:layout_alignEnd="@+id/editCity" />
 
     <TextView
         android:layout_width="wrap_content"
